Using flexbox to prevent the menu from overlapping the grid

--- a/src/components/Cell/cell.scss
+++ b/src/components/Cell/cell.scss
@@ -13,9 +13,9 @@
 }
 
 .dead {
-  background-color: $background-medium;
+  background-color: $background-white;
 }
 
 .alive {
-  background-color: $background-light;
+  background-color: $background-black;
 }
