--- a/src/components/Game/game.scss
+++ b/src/components/Game/game.scss
@@ -1,47 +1,61 @@
 @import '../_mixins.scss';
 
-body {
-  background-color: $background-dark;
+html, body {
+  margin:0;
+  height:100%;
+  min-height:100%;
+  background-color: $background-black;
 }
 
-.controls {
-  padding: 1px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  background-color: $background-light;
-  border-bottom: 1px solid $background-dark;
-  width: 100%;
-  text-align: center;
-
-  .control {
-    color: $background-dark;
-    display: inline-block;
-    border: 1px solid $background-dark;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: 700;
-    letter-spacing: .2px;
-    line-height: 1.166666;
-    margin: 8px 4px;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    transition: background .2s;
-    min-height: 52px;
-    min-width: 180px;
-  }
-
-  .start, .save {
-    background-color: $background-light;
-  }
-
-  .stop, .reset {
-    background-color: $background-medium;
-  }
+#app {
+  height:100%;
+  min-height:100%;
 }
 
 .game {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  height:100%;
+  min-height:100%;
+
+  .controls {
+    padding: 1px;
+    flex: 0;
+    background-color: $background-white;
+    border-bottom: $cell-margin--width solid $background-black;
+    text-align: center;
+
+    .control {
+      color: $background-black;
+      display: inline-block;
+      border: 1px solid $background-black;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 700;
+      letter-spacing: .2px;
+      line-height: 1.166666;
+      margin: 8px 4px;
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      transition: background .2s;
+      min-height: 52px;
+      min-width: 180px;
+    }
+
+    .start, .save {
+      background-color: $background-white;
+    }
+
+    .stop, .reset {
+      background-color: $background-white;
+    }
+  }
+
+  .full {
+    flex: 8;
+    overflow-y: scroll
+  }
 }
