--- a/src/components/Grid/grid.scss
+++ b/src/components/Grid/grid.scss
@@ -7,5 +7,5 @@
 .grid {
   border-spacing: $cell-padding $cell-padding;
   border-collapse: separate;
-  border-color: palevioletred;
+  border-color: $background-white;
 }
