--- a/src/components/_mixins.scss
+++ b/src/components/_mixins.scss
@@ -7,11 +7,6 @@ $cell-padding: 1px;
 //$cell-border: .1px solid white;
 $cell-border: 0;
 
-
-//$background-medium: floralwhite;
-//$background-light: #fffffa;
-//$background-dark: antiquewhite;
-
-$background-medium: lightgrey;
-$background-light: white;
-$background-dark: black;
+$background-grey: lightgrey;
+$background-white: white;
+$background-black: black;
